--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,15 @@
           <ul id="votes">
           </ul>
           <hr>
-          <button data-vote="yes">Yes</button>
-          <button data-vote="no">No</button>
-          <button data-vote="maybe">Maybe</button>
+          <form id="login">
+            <label for="login-screen_name" class="sr-only">Username</label>
+            <input type="text" id="login-screen_name" class="form-control" placeholder="Screen Name" name="screen_name" required autofocus>
+            <button class="login btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          </form>
+          <form id='vote'>
+            <button  data-vote="yes">Yes</button>
+            <button  data-vote="no">No</button>
+            <button  data-vote="maybe">Maybe</button>
+          </form>
       </body>
   </html>
