Basic messaging functionality in place in a single main chatroom

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,8 @@
             <button class="login btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
           </form>
           <form id='vote'>
-            <button  data-vote="yes">Yes</button>
-            <button  data-vote="no">No</button>
-            <button  data-vote="maybe">Maybe</button>
+            <input type="text" id='message' name="message" placeholder="Enter Your Message" required>
+            <button>Send!</button>
           </form>
       </body>
   </html>
