User messages are now dated and timestamped, messages are logged on the server

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 <html>
       <head>
           <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+          <script src="/static/scripts/jquery.js"></script>
+          <script src="/static/scripts/moment.js"></script>
+          <script src="/static/scripts/livestamp.js"></script>
           <script src="/static/scripts/index.js"></script>
           <title>Vote</title>
       </head>
@@ -18,4 +21,4 @@
             <button>Send!</button>
           </form>
       </body>
-  </html>
+</html>
