Users can now select from different channels to join
Each channel has its own message history that is displayed when a user joins,
and messages sent while in each channel are only displayed to users in that channel.

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,11 @@
             <input type="text" id='message' name="message" placeholder="Enter Your Message" required>
             <button>Send!</button>
           </form>
+          <p>
+            <a href='' class='channel-link' data-channel='Home'>Home </a>
+            <a href='' class='channel-link' data-channel='News'>News </a>
+            <a href='' class='channel-link' data-channel='Sports'>Sports </a>
+            <a href='' class='channel-link' data-channel='Gaming'>Gaming </a>
+          </p>
       </body>
 </html>
