--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
   <!--Login Container-->
   <div class="login container">
     <form class="form-signin" action="/login" method="POST">
-      <img class="mb-4" src="/static/book_icon.png" alt="" width="72" height="72">
+      <img class="mb-4" src="/static/images/page_logo.png" alt="" height="72">
       <h3 class="mb-3 font-weight-normal">Please sign in to continue:</h3>
       <label for="inputUsername" class="sr-only">Username</label>
       <input type="text" id="inputUsername" class="form-control" placeholder="Username" name="username" required autofocus>
