--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="/static/styles.css">
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons2/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons2/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicons2/favicon-16x16.png">
+    <link rel="manifest" href="/static/favicons2/site.webmanifest">
     <!-- Title -->
     <title>Flack-Teams: {% block title %}{% endblock %}</title>
   </head>
