--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block main %}
   <!--Registration Container-->
   <div class="register container">
     <form class="form-signin" action="/register" method="post">
-      <img class="mb-4" src="/static/book_icon.png" alt="" width="72" height="72">
+      <img class="mb-4" src="/static/Images/page_logo.png" alt="" height="72">
       <h3 class="mb-3 font-weight-normal">Register for an account:</h3>
       <label for="inputUsername" class="sr-only">Username</label>
       <input type="text" id="inputUsername" class="form-control" placeholder="Username" name="username" required autofocus>
