--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,32 @@
       <h1>Flack<br>Teams</h1>
     </a>
     <hr>
+    <h5>Current Workspace:</h5>
     <h3 id="curr-channel"></h3>
     <h4><span class="online">&#9673;</span> {{session.username}}</h4>
     <hr>
-    <h5>Sub-channels:</h5>
-    <ul id="channel-links">
-    </ul>
+    <!-- Channel List -->
+    <div class='channel-display'>
+      <h5 id="channel-options-display">Channels <i class="fas fa-plus-square"></i></h5>
+      <h5 id="channel-options-hide">Close X</h5>
+      <form id='new-channel'>
+        <label>Create a new channel:</label>
+        <input type="text" id='channel-name' name="channel-name" placeholder="Channel Name" required>
+        <button>Create Channel</button>
+      </form>
+      <ul id="channel-links">
+      </ul>
+    </div>
+    <hr>
+    <!-- Private Chat List -->
+    <div class='channel-display'>
+      <h5>Direct Messages <i class="fas fa-plus-square"></i></h5>
+      <ul id="private-links">
+      </ul>
+    </div>
+    <hr>
     <footer>
+      <a href="/logout"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
       <p class="footer-text">&copy; 2020 <a href="https://plcoster.github.io/homepage/index.html">P.L.Coster</a></p>
     </footer>
   </div>
@@ -40,10 +59,6 @@
       <button>Send!</button>
     </form>
   </div>
-  <form id='new-channel'>
-    <input type="text" id='channel-name' name="channel-name" placeholder="Enter Your Channel Name" required>
-    <button>Create New Channel!</button>
-  </form>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
   <script src="/static/scripts/jquery.js"></script>
   <script src="/static/scripts/moment.js"></script>
