--- a/static/styles.scss
+++ b/static/styles.scss
@@ -220,23 +220,48 @@ CHAT ROOM
 ==========================
 */
 
-#vote {
+#chat-input {
   position: fixed;
-  bottom: 20px;
-  left: 220px;
+  bottom: 0;
+  left: 200px;
   width: 100%;
-  margin-right: 20px;
+  padding-bottom: 20px;
   text-align: left;
+  z-index: 2;
+  background-color: $primary-container;
+
+  hr {
+    margin-top: 0;
+    padding-left: -20px;
+  }
+
+  #chat-input-form {
+    padding-left: 20px;
+  }
 
   #message {
     width: 50%;
   }
 }
 
+#message-list {
+  text-align: left;
+  height: 100%;
+  overflow-y: auto;
+}
+
 .online {
   color: #96E072;
 }
 
+.profile-icon {
+  height: 50px;
+  margin-top: 5px;
+}
+
+#message-list {
+  margin-left: 200px;
+}
 
 
 /*
@@ -466,7 +491,7 @@ LOGIN, REGISTER, ACCOUNT
   -webkit-box-shadow: 11px 11px 10px -4px rgba(0,0,0,0.5);
   -moz-box-shadow: 11px 11px 10px -4px rgba(0,0,0,0.5);
   box-shadow: 11px 11px 10px -4px rgba(0,0,0,0.5);
-  max-width: 420px;
+  max-width: 450px;
 }
 
 .login .btn, .register .btn {
@@ -476,7 +501,7 @@ LOGIN, REGISTER, ACCOUNT
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 400px;
   padding: 15px;
   margin: 0 auto;
 }
@@ -505,16 +530,39 @@ LOGIN, REGISTER, ACCOUNT
   border-top-right-radius: 0;
 }
 
-.register p {
+.register {
+
+  p {
+  font-size: 14px;
+  line-height: 16px;
   margin-bottom: 0;
-}
+  margin-top: 5px;
+  }
 
-.register #inputPassword {
-  margin-top: 20px;
-}
+  #inputPassword {
+    margin-top: 20px;
+  }
 
-.delete_account {
-  display: none;
+  [type=radio] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  [type=radio] + img {
+    cursor: pointer;
+    margin: 4px 4px;
+    height: 60px;
+  }
+
+  [type=radio]:checked + img {
+    outline: 2px solid #000;
+  }
+
+  .delete_account {
+    display: none;
+  }
 }
 
 
