--- a/static/styles.css
+++ b/static/styles.css
@@ -215,6 +215,34 @@ CHAT ROOM
 #chatroom-panel #chatroom-header hr {
   margin-bottom: 0;
 }
+#chatroom-panel #messages {
+  list-style-type: none;
+  padding-left: 10px;
+}
+#chatroom-panel #messages img {
+  float: left;
+  margin: 0 5px 8px 0;
+}
+#chatroom-panel #messages li {
+  margin-top: 5px;
+}
+#chatroom-panel #messages li:after, #chatroom-panel #messages li:before {
+  content: "";
+  display: table;
+  clear: both;
+}
+#chatroom-panel #messages h5, #chatroom-panel #messages p {
+  font-size: 14px;
+  line-height: 16px;
+  margin-bottom: 4px;
+}
+#chatroom-panel #messages p {
+  margin-bottom: 8px;
+}
+#chatroom-panel #messages .message-date {
+  font-weight: 300;
+  font-size: 12px;
+}
 #chatroom-panel #chat-input {
   position: fixed;
   left: 200px;
@@ -241,6 +269,7 @@ CHAT ROOM
 
 .profile-icon {
   height: 50px;
+  width: 50px;
   margin-top: 5px;
 }
 
