--- a/static/styles.css
+++ b/static/styles.css
@@ -199,7 +199,7 @@ CHAT ROOM
   max-height: 100vh;
   margin-left: 200px;
   text-align: left;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 #chatroom-panel #chatroom-header {
   position: fixed;
@@ -269,7 +269,7 @@ CHAT ROOM
 
 .profile-icon {
   height: 50px;
-  width: 50px;
+  width: auto;
   margin-top: 5px;
 }
 
