--- a/static/styles.css
+++ b/static/styles.css
@@ -160,16 +160,17 @@ SIDE NAV
 .sidenav #new-channel, .sidenav #channel-options-hide {
   display: none;
 }
-.sidenav #new-channel button, .sidenav #channel-name {
+.sidenav #new-channel button, .sidenav #channel-name, .sidenav #new-workspace button, .sidenav #workspace-name {
   width: 140px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
+  margin-bottom: 5px;
 }
 .sidenav #new-channel {
   height: 30vh;
 }
 .sidenav ul {
-  height: 30vh;
+  height: 25vh;
   list-style-type: none;
   margin-left: -40px;
   margin-bottom: 0;
@@ -210,14 +211,15 @@ CHAT ROOM
   left: 200px;
   top: 0px;
   width: 100%;
+  padding-top: 10px;
   z-index: 2;
   background-color: #f9f9f9;
 }
 #chatroom-panel #chatroom-header #chatroom-header-text {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 #chatroom-panel #chatroom-header hr {
-  margin-bottom: 0;
+  margin: 0 0;
 }
 #chatroom-panel #messages {
   list-style-type: none;
@@ -239,6 +241,7 @@ CHAT ROOM
   font-size: 14px;
   line-height: 16px;
   margin-bottom: 4px;
+  margin-left: 55px;
 }
 #chatroom-panel #messages p {
   margin-bottom: 8px;
