--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,21 @@
     <h5>Current Workspace:</h5>
     <h3 id="curr-workspace"></h3>
     <h4><span class="online">&#9673;</span> {{session.screen_name}}</h4>
+    <h5 id="workspace-options-display">Workspaces <i class="fas fa-plus-square"></i></h5>
+    <form id='new-workspace'>
+      <label>Create a workspace:</label>
+        <input type="text" id='workspace-name' name="workspace-name" placeholder="Workspace Name" required>
+        <button class="btn btn-primary">Create Workspace</button>
+    </form>
     <hr>
     <!-- Channel List -->
     <div class='channel-display'>
       <h5 id="channel-options-display">Channels <i class="fas fa-plus-square"></i></h5>
       <h5 id="channel-options-hide">Close X</h5>
       <form id='new-channel'>
-        <label>Create a new channel:</label>
+        <label>Create a channel:</label>
         <input type="text" id='channel-name' name="channel-name" placeholder="Channel Name" required>
-        <button>Create Channel</button>
+        <button class="btn btn-primary">Create Channel</button>
       </form>
       <ul id="channel-links">
       </ul>
