--- a/static/styles.scss
+++ b/static/styles.scss
@@ -171,9 +171,43 @@ SIDE NAV
     background-color: #fff;
   }
 
-  h3, h4, h5 {
+  h3, h4, h5, #dropdownMenuLink{
     font-weight: 600;
     color: #fff;
+  }
+
+  .dropdown {
+    margin-bottom: 10px;
+
+    #dropdownMenuLink{
+      font-size: 24px;
+    }
+
+    .dropdown-menu {
+      width: 100% !important;
+    }
+
+    .dropdown-menu.show {
+      left: 40px !important;
+      width: 100% !important;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 16px;
+      margin-left: 100px;
+      border: 1px solid white;
+
+      .dropdown-header {
+          padding: 2px 4px;
+          color: #fff;
+          font-weight: 300;
+          font-size: 16px;
+          line-height: 16px;
+      }
+
+      .dropdown-item {
+          padding: 4px 4px;
+      }
+    }
   }
 
   #new-channel, #channel-options-hide {
@@ -192,7 +226,7 @@ SIDE NAV
   }
 
   ul {
-    height: 25vh;
+    height: 20vh;
     list-style-type: none;
     margin-left: -40px;
     margin-bottom: 0;
@@ -222,6 +256,8 @@ SIDE NAV
     }
   }
 }
+
+
 
 /*
 ==========================
