--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,33 @@
 {% block main %}
   <!-- Side Nav Bar -->
   <div class="sidenav">
+
+    <!-- Logo Panel -->
     <a class="navbar-brand" id="logo" href="/">
       <img src="/static/Images/nav_logo.png" alt="" width="42" height="42">
       <h1>Flack<br>Teams</h1>
     </a>
     <hr>
-    <h5>Current Workspace:</h5>
-    <h3 id="curr-workspace"></h3>
+
+    <!-- Username Panel -->
     <h4><span class="online">&#9673;</span> {{session.screen_name}}</h4>
+    <hr>
+
+    <!-- Workspace Panel -->
+    <h5>Current Workspace:</h5>
+
+    <div class="dropdown show">
+      <a class="curr-workspace dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <h6 class="dropdown-header">Your Workspaces:</h6>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Test1</a>
+    <a class="dropdown-item" href="#">Test2</a>
+    <a class="dropdown-item" href="#">Test3</a>
+  </div>
+</div>
+
     <h5 id="workspace-options-display">Workspaces <i class="fas fa-plus-square"></i></h5>
     <form id='new-workspace'>
       <label>Create a workspace:</label>
@@ -21,6 +40,7 @@
         <button class="btn btn-primary">Create Workspace</button>
     </form>
     <hr>
+
     <!-- Channel List -->
     <div class='channel-display'>
       <h5 id="channel-options-display">Channels <i class="fas fa-plus-square"></i></h5>
